@@ -37,7 +37,11 @@ public class MojoConstants {
     // Gatling constants
     public static final String GATLING_MAIN_CLASS = "io.gatling.app.Gatling";
     public static final List<String> GATLING_JVM_ARGS = asList(
-            "-server", "-Xms512M", "-Xmx512M", "-XX:+HeapDumpOnOutOfMemoryError",
+            "-server", "-Xmx1G",
+            "-XX:+UseG1GC", "-XX:MaxGCPauseMillis=30", "-XX:G1HeapRegionSize=16m", "-XX:InitiatingHeapOccupancyPercent=75",
+            "-XX:+ParallelRefProcEnabled", "-XX:+PerfDisableSharedMem",
             "-XX:+AggressiveOpts", "-XX:+OptimizeStringConcat",
-            "-XX:+UseParNewGC", "-XX:+UseConcMarkSweepGC", "-XX:+CMSParallelRemarkEnabled");
+            "-XX:+HeapDumpOnOutOfMemoryError",
+            "-Djava.net.preferIPv4Stack=true", "-Djava.net.preferIPv6Addresses=false"
+    );
 }
